clusters/prod/extras/jellyfin/ingress.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: jellyfin-via-cf-tunnel
  namespace: jellyfin
  # annotations:
  #   route.openshift.io/termination: edge
  #   kubernetes.io/ingress.class: openshift-default
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: jellyfin.hknlab.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  name: http
  # tls:
  #   - secretName: jellyfin-tls
  #     hosts:
  #      - jellyfin.hknlab.io
